--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,7 +199,10 @@ elseif(MSVC)
     set(ADDITIONAL_LIBS ws2_32 shell32 advapi32 userenv)
 endif()
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CFLAGS}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CFLAGS} -Wall")
+if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wextra -Wno-missing-braces -Wno-unused-function -Wno-unused-parameter -Wno-sign-compare -Wno-missing-field-initializers")
+endif()
 add_executable(${JA2_BINARY} ${JA2_SOURCES})
 target_link_libraries(${JA2_BINARY} ${SDL2_LIBRARY} ${Boost_LIBRARIES} ${GTEST_LIBRARIES} slog smacker ${STRACCIATELLA_LIBRARIES} ${ADDITIONAL_LIBS})
 add_dependencies(${JA2_BINARY} libstracciatella)
